[project]
name = "network-path-diagnostics"
version = "0.1.0"
description = "Windows desktop multi-target ping monitoring tool."
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.7",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
